create crud for user entity! create integration test for user entity!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-
+logging.level.org.springframework=INFO
+logging.level.com.zaxxer=DEBUG
+logging.level.root=ERROR
 #Hikari configuration
 
 spring.datasource.hikari.connection-timeout=2000
@@ -9,14 +11,24 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=120000
 spring.datasource.hikari.auto-commit=true
 
+
+#Turn Statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+# Show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+
+
 #H2 database config
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
 
 
 
